tests/specs/ecosystem/flashcard/core/0_0_2.test
flashcard/core/0.0.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/mod.ts
Check file://<tmpdir>/card.ts
Check file://<tmpdir>/deck.ts
Check file://<tmpdir>/note.ts
Check file://<tmpdir>/template.ts
error: TS1192 [ERROR]: Module '"file://<tmpdir>/scheduler.ts"' has no default export.
import Scheduler from "./scheduler.ts";
       ~~~~~~~~~
    at file://<tmpdir>/deck.ts:4:8

TS2305 [ERROR]: Module '"file://<tmpdir>/scheduler.ts"' has no exported member 'default'.
export { default as Scheduler } from "./scheduler.ts";
         ~~~~~~~
    at file://<tmpdir>/mod.ts:9:10

Found 2 errors.

